--- a/KETANG/package.json
+++ b/KETANG/package.json
@@ -29,7 +29,9 @@
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "iscroll": "^5.2.0",
     "jest": "20.0.4",
+    "jquery": "1.11.3",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "moment": "^2.22.2",
@@ -43,9 +45,11 @@
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-iscroll": "^2.0.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-swipe": "^5.1.1",
+    "react-swipes": "^1.1.0",
     "react-transition-group": "^2.2.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
